--- a/views/game.jade
+++ b/views/game.jade
@@ -11,5 +11,20 @@ html(lang="en")
         h1 Invalid game
       else
         h1 This is game id #{gameID}
+        canvas#game_canvas(width='500', height='500')
 
     script(src='//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js')
+    script(src='js/chess.js')
+    script.
+      var b = new Board('game_canvas');
+      b.draw();
+
+      var c = document.getElementById('game_canvas');
+      c.addEventListener('click', clickChessBoard, false);
+
+      function clickChessBoard(event) {
+        var coords = c.relMouseCoords(event);
+        b.click(coords.x, coords.y);
+        b.draw();
+      }
+
