--- a/views/game.jade
+++ b/views/game.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-    link(rel='stylesheet', href='css/main.css')
+    link(rel='stylesheet', href='../css/main.css')
     script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js')
     title #{pageTitle} ##{gameID}
   body
@@ -11,10 +11,10 @@ html(lang="en")
         h1 Invalid game
       else
         h1 This is game id #{gameID}
-        canvas#game_canvas(width='500', height='500')
+        canvas#game_canvas(width='520', height='520')
 
     script(src='//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js')
-    script(src='js/chess.js')
+    script(src='../js/chess.js')
     script.
       var b = new Board('game_canvas');
       b.draw();
