Refactor everything to use new Coord class

--- a/views/game.jade
+++ b/views/game.jade
@@ -28,6 +28,6 @@ html(lang="en")
       }
 
       $('#temp').on('click', function(event) {
-        b.makeMove({from:{x: 1, y: 6}, to: {x: 1, y: 4}}, {from: {x: 3, y: 0}, to: {x: 3, y: 1}});
+        b.makeMove({from: {col: 1, row: 6}, to: {col: 1, row: 4}}, {from: {col: 3, row: 0}, to: {col: 3, row: 1}});
       });
 
