--- a/views/game.jade
+++ b/views/game.jade
@@ -28,7 +28,14 @@ html(lang="en")
       }
 
       $('#temp').on('click', function(event) {
-        b.makeMove(new Move('WHITE', new Coord(6, 1), 'NORTH', 2),
-                   new Move('BLACK', new Coord(0, 3), 'SOUTH', 1));
+        var result = b.makeMove(new Move('WHITE', new Coord(6, 1), 'NORTH', 2),
+                                new Move('BLACK', new Coord(0, 3), 'SOUTH', 1));
+        console.log(result);
+        result = b.makeMove(new Move('WHITE', new Coord(7, 3), 'NORTH-EAST', 1),
+                            new Move('BLACK', new Coord(1, 3), 'SOUTH', 3));
+        console.log(result);
+        result = b.makeMove(new Move('WHITE', new Coord(7, 2), 'NORTH-WEST', 2),
+                            new Move('BLACK', new Coord(4, 3), 'SOUTH-WEST', 2));
+        console.log(result);
       });
 
